--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indie-stack-template",
+  "name": "remix-app-a3f8",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -7,9 +7,7 @@
     "dev": "remix dev -c \"npm run dev:serve\"",
     "dev:serve": "binode --require ./mocks -- @remix-run/serve:remix-serve ./build",
     "format": "prettier --write .",
-    "format:repo": "npm run format && npm run lint:repo -- --fix",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "lint:repo": "npm run lint -- --config .eslintrc.repo.js",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
     "start": "remix-serve build",
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
@@ -59,8 +57,6 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-prefer-let": "^3.0.1",
     "happy-dom": "^9.20.3",
     "msw": "^1.2.2",
     "npm-run-all": "^4.1.5",
